--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -74,6 +74,7 @@ header {
         height: rem(550);
         min-width: rem(255);
         max-width: rem(255);
+        padding: 10px;
         
         & .user {
             align-items: center;
